2014-06-14  Michael R. Crusoe  <mcrusoe@msu.edu>

    * scripts/{abundance-dist-single,filter-abund-single,load-into-counting,
    normalize-by-median}.py,tests/test_scripts.py: added '--report-total-kmers' 
    option to all scripts that create k-mer tables.

2014-06-15  Titus Brown  <t@idyll.org>

    * sandbox/calc-median-distribution.py: updates to print cumulative
	distribution for calc-median-distribution.

2014-06-14  Titus Brown  <t@idyll.org>

    * doc/scripts.txt: added extract-long-sequences.py doc reference.
    * scripts/extract-long-sequences.py: set default sequence length to
	extract to 200 bp.

2014-06-13  Michael R. Crusoe  <mcrusoe@msu.edu>

    * MANIFEST.in: don't include docs/, data/, or examples/ in our PyPI
    distribution. Saves 15MB.

2014-06-13  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Makefile: split coverity target in two: -build and -upload. Added
    configuration target

2014-06-13  Titus Brown  <t@idyll.org>

    * doc/install.txt: updated virtualenv command to use python2 explicitly,
	for arch support.

2014-06-13  Titus Brown  <t@idyll.org>

    * khmer/__init__.py, khmer/file_args.py: Moved copyright message to a
	comment.
    * khmer/file.py: updated error messages for disk-space checking functions;
	added test hooks.
    * tests/test_script_arguments.py: added tests for several functions in
	khmer/file.py.
    * sandbox/assemstats3.py: handle missing input files.

2014-06-12  Michael Wright <wrigh517@msu.edu>

    * sandbox/load-into-hashbits: Deleted from sandbox. It is superseded
    by load-graph.py --no-tagset.

2014-06-11  Michael Wright <wrigh517@msu.edu>

    * scripts/load-into-counting: Fixed docstring misnomer to 
	load-into-counting.py

2014-06-10  Michael R. Crusoe  <mcrusoe@msu.edu>

    * setup.py,tests/{__init__,khmer_tst_utils,test_scripts,
    khmer_test_counting_single}.py: made tests runnable after installation.
    * lib/{khmer.hh,hashtable.hh,read_parsers.cc,read_parsers.hh}: restructure