@@ -14,6 +14,7 @@ Build a graph from the given sequences, save in <htname>.
 Use '-h' for parameter help.
 """
 
+from __future__ import print_function
 import sys
 import threading
 
@@ -37,6 +38,8 @@ def get_parser():
                         ' k-mer presence table filename.')
     parser.add_argument('input_filenames', metavar='input_sequence_filename',
                         nargs='+', help='input FAST[AQ] sequence filename')
+    parser.add_argument('--report-total-kmers', '-t', action='store_true',
+                        help="Prints the total number of k-mers to stderr")
     return parser
 
 
@@ -55,14 +58,14 @@ def main():
     check_space(args.input_filenames)
     check_space_for_hashtable(float(args.n_tables * args.min_tablesize) / 8.)
 
-    print 'Saving k-mer presence table to %s' % base
-    print 'Loading kmers from sequences in %s' % repr(filenames)
+    print('Saving k-mer presence table to %s' % base)
+    print('Loading kmers from sequences in %s' % repr(filenames))
     if args.no_build_tagset:
-        print 'We WILL NOT build the tagset.'
+        print('We WILL NOT build the tagset.')
     else:
-        print 'We WILL build the tagset (for partitioning/traversal).'
+        print('We WILL build the tagset (for partitioning/traversal).')
 
-    print 'making k-mer presence table'
+    print('making k-mer presence table')
     htable = khmer.new_hashbits(args.ksize, args.min_tablesize, args.n_tables)
 
     if args.no_build_tagset:
@@ -77,7 +80,7 @@ def main():
 
         rparser = khmer.ReadParser(filename, n_threads)
         threads = []
-        print 'consuming input', filename
+        print('consuming input', filename)
         for _ in xrange(n_threads):
             cur_thrd = threading.Thread(target=target_method, args=(rparser, ))
             threads.append(cur_thrd)
@@ -86,23 +89,27 @@ def main():
         for thread in threads:
             thread.join()
 
-    print 'saving k-mer presence table in', base + '.pt'
+    if args.report_total_kmers:
+        print('Total number of k-mers: {}'.format(htable.n_occupied()),
+              file=sys.stderr)
+
+    print('saving k-mer presence table in', base + '.pt')
     htable.save(base + '.pt')
 
     if not args.no_build_tagset:
-        print 'saving tagset in', base + '.tagset'
+        print('saving tagset in', base + '.tagset')
         htable.save_tagset(base + '.tagset')
 
     info_fp = open(base + '.info', 'w')
     info_fp.write('%d unique k-mers' % htable.n_unique_kmers())
 
     fp_rate = khmer.calc_expected_collisions(htable)
-    print 'fp rate estimated to be %1.3f' % fp_rate
+    print('fp rate estimated to be %1.3f' % fp_rate)
     if fp_rate > 0.15:          # 0.18 is ACTUAL MAX. Do not change.
-        print >> sys.stderr, "**"
-        print >> sys.stderr, ("** ERROR: the graph structure is too small for "
-                              "this data set.  Increase table size/# tables.")
-        print >> sys.stderr, "**"
+        print("**", file=sys.stderr)
+        print("** ERROR: the graph structure is too small for this data set."
+              "Increase table size/# tables.", file=sys.stderr)
+        print("**", file=sys.stderr)
         sys.exit(1)
 
 if __name__ == '__main__':
